Avance del SPRINT 6
Ya hice el requisito 81 para que Cepeda pueda empezar a trabajar.
Estuve mejorando los mensajes de validaciones en cada formulario... a medida que hacia eso solucione varios bugs que me encontre. Por ejemplo: Habia problemas con las fechas en los formularios, tambien me fije en la sincronización de la app con la BD.
Tambien agrege en cada carpeta rol la vista: fase-5.xhtml.

--- a/web/coordinador/asignar-evaluadores-anteproyecto.xhtml
+++ b/web/coordinador/asignar-evaluadores-anteproyecto.xhtml
@@ -45,7 +45,7 @@
                     <div class="tituloContenido">                        
                         <h:outputText value="Asignación de evaluadores"/> <br/>
                     </div>
-                    <p:growl id="growl" showDetail="true" life="5000"/>
+                    <p:growl id="growl" showDetail="false" life="5000"/>
                     <p:spacer height="30"/>
                     
                     <h:form enctype="multipart/form-data">
