--- a/web/director/diligenciar-formato-A.xhtml
+++ b/web/director/diligenciar-formato-A.xhtml
@@ -38,7 +38,7 @@
                         <p:wizard backLabel="Anterior" nextLabel="Siguiente" style="font-size: 14px;">
                             <p:tab id="paso1" title="Paso 1">
                                 <p:panel header="Campos con * son obligatorios">
-                                    <p:messages />
+                                    <p:growl id="growl1" showDetail="false" life="5000"/>
                                     <h:panelGrid style="margin: 0 auto;" columns="2" columnClasses="label, value" cellpadding="5">
 
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
@@ -93,7 +93,7 @@
 
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
 
-                                        <p:outputLabel styleClass="subtitulosFormato" value="Director del trabajo de grado: *"> </p:outputLabel>
+                                        <p:outputLabel styleClass="subtitulosFormato" value="Director del trabajo de grado:"> </p:outputLabel>
                                         <p:outputLabel value="#{formatoA.nombreDirector}"> </p:outputLabel>
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
                                     </h:panelGrid>
@@ -102,7 +102,7 @@
 
                             <p:tab id="paso2" title="Paso 2">
                                 <p:panel header="Campos con * son obligatorios">
-                                    <p:messages />
+                                    <p:growl id="growl2" showDetail="false" life="8000"/>
                                     <h:panelGrid style="margin: 0 auto;" columnClasses="label, value" cellpadding="5">
                                         <p:separator style="border-color: white !important;" />
                                         <p:outputLabel styleClass="subtitulosFormato" value="Objetivos: *"> </p:outputLabel>
@@ -135,7 +135,7 @@
 
                             <p:tab id="paso3" title="Paso 3">
                                 <p:panel header="Campos con * son obligatorios">
-                                    <p:messages />
+                                    <p:growl id="growl3" showDetail="false" life="8000"/>
                                     <h:panelGrid cellpadding="5">
                                         <p:separator style="border-color: white !important;" />
                                         <p:outputLabel styleClass="subtitulosFormato" value="Recursos requeridos: *"> </p:outputLabel>
@@ -152,7 +152,7 @@
                                         <p:separator style="border-color: white !important;" />
                                         <p:column>
                                             <p:outputLabel styleClass="subtitulosFormato" value="Fecha: *"> </p:outputLabel>
-                                            <p:calendar navigator="true" value="#{formatoA.fecha}" required="true" label="Fecha" pattern="dd-MM-yyyy" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" requiredMessage="Debe ingresar la fecha en que diligencia este formato." style="margin-left: 10px; margin-right: 10px"/>
+                                            <p:calendar navigator="true" value="#{formatoA.fecha}" required="true" label="Fecha" pattern="dd-MM-yyyy" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" maxdate="#{formatoA.today}" requiredMessage="Debe ingresar la fecha en que diligencia este formato." style="margin-left: 10px; margin-right: 10px"/>
                                         </p:column>
                                         <p:separator style="border-color: white !important;" />
                                     </h:panelGrid>
