--- a/web/vistas-documentos/ver-formato-A.xhtml
+++ b/web/vistas-documentos/ver-formato-A.xhtml
@@ -76,8 +76,8 @@
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="Estudiante(s):" styleClass="subtitulosFormato" />
                                     <p:column>
-                                        <p:outputLabel value="#{formatoA.nomEst1}" /> <br />
-                                        <p:outputLabel value="#{formatoA.nomEst2}" />
+                                        <p:outputLabel value="#{formatoA.nomEst1}" style="margin-left: 5px"/> <br />
+                                        <p:outputLabel value="#{formatoA.nomEst2}" style="margin-left: 5px"/>
                                     </p:column>
                                 </h:panelGrid>
                                 <br />
