--- a/web/evaluador/editar-formato-B.xhtml
+++ b/web/evaluador/editar-formato-B.xhtml
@@ -36,29 +36,29 @@
                     <div class="tituloContenido">                        
                         <h:outputText value="FORMATO B: EVALUACIÓN DEL ANTEPROYECTO"/> <br/>
                     </div>
-                    <p:growl id="growl" showDetail="true" life="5000"/>
+                    <p:growl id="growl" showDetail="false" life="5000"/>
                     <p:spacer height="30"/>
                     <h:form>
                         <p:wizard backLabel="Anterior" nextLabel="Siguiente" style="font-size: 14px;">
                             <p:tab id="paso1" title="Paso 1">
                                 <p:panel header="Campos con * son obligatorios">
-                                    <p:messages />
+                                    <p:growl id="growl1" showDetail="false" life="5000"/>
                                     <h:panelGrid style="margin: 0 auto;" columns="2" columnClasses="label, value" cellpadding="5">
 
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
 
                                         <p:outputLabel styleClass="subtitulosFormato" value="Titulo del trabajo de grado:"> </p:outputLabel>
-                                        <p:outputLabel styleClass="subtitulosFormato" value="#{formatoB.titulo}"> </p:outputLabel>                                        
+                                        <p:outputLabel value="#{formatoB.titulo}"> </p:outputLabel>                                        
 
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
 
                                         <p:outputLabel styleClass="subtitulosFormato" value="Nombre de los estudiantes:"> </p:outputLabel>
-                                        <p:outputLabel styleClass="subtitulosFormato" value="#{formatoB.est1est2}"> </p:outputLabel>                                        
+                                        <p:outputLabel value="#{formatoB.est1est2}"> </p:outputLabel>                                        
 
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
 
                                         <p:outputLabel styleClass="subtitulosFormato" value="Director de trabajo:"> </p:outputLabel>
-                                        <p:outputLabel styleClass="subtitulosFormato" value="#{formatoB.director}"> </p:outputLabel>                                        
+                                        <p:outputLabel value="#{formatoB.director}"> </p:outputLabel>                                        
 
                                         <p:separator style="border-color: white !important;" /><p:separator style="border-color: white !important;" />
                                     </h:panelGrid>
@@ -67,7 +67,7 @@
 
                             <p:tab id="paso2" title="Paso 2">
                                 <p:panel header="Campos con * son obligatorios" >
-                                    <p:messages />
+                                    <p:growl id="growl2" showDetail="false" life="5000"/>
                                     <h:panelGrid style="margin: 0 auto;" columns="3" columnClasses="label, value" cellpadding="5">
                                         <p:separator style="border-color: white !important;" />
                                         <p:separator style="border-color: white !important;" />
@@ -155,12 +155,12 @@
 
                             <p:tab id="paso3" title="Paso 3">
                                 <p:panel header="Campos con * son obligatorios">
-                                    <p:messages />
+                                    <p:growl id="growl3" showDetail="false" life="5000"/>
                                     <h:panelGrid style="margin: 0 auto;" columns="2" columnClasses="label, value" cellpadding="5">
                                         <p:separator style="border-color: white !important;" />
                                         <p:separator style="border-color: white !important;" />
 
-                                        <p:outputLabel styleClass="subtitulosFormato" value="Concepto general:"/>                                        
+                                        <p:outputLabel styleClass="subtitulosFormato" value="Concepto general: *"/>                                        
                                         <p:selectOneRadio id="aprobadoH" value="#{formatoB.elementoConsideradoH}">                                        
                                             <f:selectItem itemLabel="Aprobado" itemValue="1" />
                                             <f:selectItem itemLabel="No Aprobado" itemValue="0" />
@@ -176,13 +176,13 @@
                                         <p:separator style="border-color: white !important;" />
 
                                         <p:outputLabel styleClass="subtitulosFormato" value="Fecha: *"> </p:outputLabel>
-                                        <p:calendar navigator="true" value="#{formatoB.fecha}" required="true" label="Fecha" pattern="dd-MM-yyyy" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" requiredMessage="Debe ingresar la fecha en que diligencia este formato." style="margin-right: 10px"/>
+                                        <p:calendar navigator="true" value="#{formatoB.fecha}" required="true" label="Fecha" pattern="dd-MM-yyyy" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" maxdate="#{formatoB.today}" requiredMessage="Debe ingresar la fecha en que diligencia este formato." style="margin-right: 10px"/>
 
                                         <p:separator style="border-color: white !important;" />
                                         <p:separator style="border-color: white !important;" />
 
                                         <p:outputLabel styleClass="subtitulosFormato" value="Nombre del evaluador:"> </p:outputLabel>
-                                        <p:outputLabel styleClass="subtitulosFormato" value="#{formatoB.evaluador}"> </p:outputLabel>                                        
+                                        <p:outputLabel value="#{formatoB.evaluador}"> </p:outputLabel>                                        
 
                                         <p:separator style="border-color: white !important;" />
                                         <p:separator style="border-color: white !important;" />
