--- a/web/evaluador/fase-3.xhtml
+++ b/web/evaluador/fase-3.xhtml
@@ -56,7 +56,7 @@
                                     </p:effect>
                                 </p:commandButton>
                                 <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Evaluación del Trabajo de Grado" outcome="fase-5" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             </h:panelGrid>
                         </p:panel>      
@@ -68,6 +68,12 @@
                                 <p:button value="Editar" icon="ui-icon-pencil" href="editar-formato-B.xhtml" disabled="#{trabajodegradoController.btnEditarFormatoB}" style="width: 120px;" rendered="#{!trabajodegradoController.btnEditarFormatoB}" />
                                 <p:commandButton value="Ver" icon="ui-icon-comment" actionListener="#{formatoB.btnVerFormatoB(serviciosSimcaController.nombreUsuario)}" disabled="#{trabajodegradoController.btnVerFormatoB}" style="width: 120px;" /> 
                                 <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoB}" style="width: 120px;" actionListener="#{pdfFormatoB.pdfFormatoBEvaluador(serviciosSimcaController.nombreUsuario)}" oncomplete="PF('dlgVerRutina').show();" />
+                            </h:panelGrid>
+                            
+                            <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
+                                <h:outputText value="Formato D: " style="font-weight: bold;" />
+                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-formato-D.xhtml" disabled="#{trabajodegradoController.btnVerRemisionAnteproyecto}" style="width: 120px;" />
+                                <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" href="#" disabled="#{trabajodegradoController.btnVerRemisionAnteproyecto}" style="width: 120px;" />
                             </h:panelGrid>
                         </p:panel>
                     </p:panel>
