--- a/web/evaluador/fase-4.xhtml
+++ b/web/evaluador/fase-4.xhtml
@@ -46,9 +46,9 @@
                             <p:button value="Realización del Anteproyecto" outcome="fase-2" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             <p:button value="Evaluación del Anteproyecto" outcome="fase-3" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
 
-                            <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" />                                
+                            <p:button value="Ejecución del Trabajo de Grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" />                                
 
-                            <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                            <p:button value="Evaluación del Trabajo de Grado" outcome="fase-5" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                         </h:panelGrid>                        
                     </p:panel>
@@ -62,8 +62,6 @@
                     </p:panel>
                 </p:panel>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
