--- a/web/evaluador/fase-5.xhtml
+++ b/web/evaluador/fase-5.xhtml
@@ -13,11 +13,11 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Inicio" outcome="./../perfiles/vista-director.xhtml" />
-                        <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
-                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-director.xhtml" /> 
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-4" />
-                        <p:menuitem value="4. Ejecución del Trabajo de Grado" />
+                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />
+                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />
+                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-evaluador.xhtml" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-5" />
+                        <p:menuitem value="5. Evaluación del Trabajo de Grado" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
@@ -45,22 +45,23 @@
                             <p:button value="Presentación de la Idea" outcome="fase-1" disabled="#{trabajodegradoController.fases.primeraFase}" style="width: 105px;height: 96px; font-size: 13px;" />                            
                             <p:button value="Realización del Anteproyecto" outcome="fase-2" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             <p:button value="Evaluación del Anteproyecto" outcome="fase-3" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-
-                            <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" />                                
-
-                            <p:button value="Evaluación del Trabajo de Grado" outcome="fase-5" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                            <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />                                
+                            <p:button value="Evaluación del Trabajo de Grado" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px; background-color:greenyellow;" />
                             <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                         </h:panelGrid>                        
                     </p:panel>
                     <p:spacer height="25"/>
-                    <p:panel id="pnlEjecucionDelTrabajoDeGrado" header="4. Ejecución del Trabajo de Grado" style=" font-size: 14px;" widgetVar="pnlEjecucionDelTrabajoDeGrado">
-                        <h:panelGrid columns="4" cellpadding="5" cellspacing="5">
-                            <h:outputText value="Formato F (Monografía):" style="font-weight: bold;" />
-                            <p:button value="Diligenciar" icon="ui-icon-document" outcome="diligenciar-formato-F.xhtml" disabled="#{trabajodegradoController.btnDiligenciarFormatoF}" style="width: 120px;" rendered="#{!trabajodegradoController.btnDiligenciarFormatoF}" />                                        
-                            <p:button value="Editar" icon="ui-icon-pencil" outcome="editar-formato-F.xhtml" style="width: 120px;" disabled="#{trabajodegradoController.btnEditarFormatoF}" rendered="#{!trabajodegradoController.btnEditarFormatoF}"/>                                 
-                            <p:button value="Ver" icon="ui-icon-pencil" outcome="/vistas-documentos/ver-formato-F.xhtml" style="width: 120px;" disabled="#{trabajodegradoController.btnVerFormatoF}"/> 
-                            <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoF}" style="width: 120px;" />
+                    <p:panel id="pnlEvaluacionDelTrabajoDeGrado" header="5. Evaluación del Trabajo de Grado" style=" font-size: 14px;" widgetVar="pnlEvaluaciónDelTrabajoDeGrado">                       
+                        <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
+                            <h:outputText value="Formato G:" style="font-weight: bold;" />
+                            <p:button value="Ver" icon="ui-icon-comment" outcome="/vistas-documentos/ver-formato-G.xhtml" disabled="#{trabajodegradoController.btnVerFormatoG}" style="width: 120px;" />
+                            <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoG}" style="width: 120px;" />
                         </h:panelGrid>
+                        <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
+                            <h:outputText value="Oficio asignación de jurados:" style="font-weight: bold;" />
+                            <p:button value="Ver" icon="ui-icon-comment" outcome="/vistas-documentos/ver-oficio-asignacion-jurados.xhtml" disabled="#{!trabajodegradoController.btnVerOficioAsigJurados}" style="width: 120px;" />
+                            <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{!trabajodegradoController.btnDescargarOficioAsigJurados}" style="width: 120px;" />
+                        </h:panelGrid> 
                     </p:panel>
                 </p:panel>
             </ui:define>
