--- a/web/secretaria/fase-4.xhtml
+++ b/web/secretaria/fase-4.xhtml
@@ -49,12 +49,18 @@
 
                                 <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" />                                
 
-                                <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Evaluación del Trabajo de Grado" outcome="fase-5" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             </h:panelGrid>                        
                         </p:panel>
                         <p:spacer height="25"/>
                         <p:panel id="pnlEjecucionDelTrabajoDeGrado" header="4. Ejecución del Trabajo de Grado" style=" font-size: 14px;" widgetVar="pnlEjecucionDelTrabajoDeGrado">
+                            <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
+                                <h:outputText value="Formato F (Monografía):" style="font-weight: bold;" />
+                                <p:button value="Ver" icon="ui-icon-pencil" outcome="/vistas-documentos/ver-formato-F.xhtml" style="width: 120px;" disabled="#{trabajodegradoController.btnVerFormatoF}"/> 
+                                <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoF}" style="width: 120px;" />
+                            </h:panelGrid> 
+                            <p:spacer height="10"/>
                             <h:panelGrid columns="1" cellpadding="5" cellspacing="5" >
                                 <h:outputText value="Avalar el estado de los requisitos de los estudiantes a sustentar" style="font-weight: bold;" />
                             </h:panelGrid>
